Make it compatible with 213* versions

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ patchPluginXml {
     changeNotes = """
       Add change notes here.<br>
       <em>most HTML tags may be used</em>"""
+    untilBuild = '213.*'
 }
 test {
     useJUnitPlatform()
