--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,6 +24,6 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew buildPlugin
     - name: Make release
-      run:  echo ${{ github.event }}
+      run:  echo ${{ github.event_name }}
 
 
