--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -15,4 +15,5 @@ jobs:
         run: chmod +x gradlew
       - name: Build with Gradle
         uses: GabrielBB/xvfb-action@v1
-        run: ./gradlew runIde -Pargs="xvfb-run"
+        with:
+          run: ./gradlew runIde -Pargs="xvfb-run"
