--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Build with Gradle
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: ./gradlew runIde -Pargs="xvfb-run"
+          run: ./gradlew runIde -Dargs="testscript.filename=test.ijperf" -Pargs="xvfb-run"
