--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -13,22 +13,10 @@ jobs:
           cache: gradle
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Build with Gradle
-        uses: GabrielBB/xvfb-action@v1
-        with:
-          options: -ac -screen 0 1920x1080x24
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          cache: gradle
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Run xvfb
-        run: /usr/bin/xvfb-run --auto-servernum -s -ac -screen 0 1920x1080x24
+      - run: sudo apt-get install xvfb
       - name: export var
-        run:  export DISPLAY=:0.0
+        run: export DISPLAY=':0.0'
+      - name: Run xvfb
+        run: Xvfb --auto-servernum -s -ac -screen 0 1920x1080x24
       - name: Build with Gradle
         run: env && ./gradlew runIde --debug
