--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -15,8 +15,8 @@ jobs:
         run: chmod +x gradlew
       - run: sudo apt-get install xvfb
       - name: export var
-        run: export DISPLAY=':0.0'
+        run: export DISPLAY=':99.0'
       - name: Run xvfb
-        run: Xvfb :99 -s -ac -screen 0 1920x1080x24
+        run: Xvfb :99 -s -ac -screen 0 1920x1080x24 > /dev/null 2>&1 &
       - name: Build with Gradle
         run: env && ./gradlew runIde --debug
