--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -14,9 +14,7 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - run: sudo apt-get install xvfb
-      - name: export var
-        run: export DISPLAY=':99.0'
       - name: Run xvfb
         run: Xvfb :99 -s -ac -screen 0 1920x1080x24 > /dev/null 2>&1 &
       - name: Build with Gradle
-        run: env && ./gradlew runIde --debug
+        run: export DISPLAY=':99.0' && env && ./gradlew runIde --debug
