--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import java.time.Duration
+
 plugins {
     id 'org.jetbrains.intellij' version '1.1.4'
     id 'java'
@@ -21,6 +23,7 @@ intellij {
         plugins = ['com.jetbrains.performancePlugin:213.5744.122']
         args = ["$rootDir/test"]
         jvmArgs = ["-Djdk.attach.allowAttachSelf=true", "-Dtestscript.filename=$rootDir/test.ijperf", "-DintegrationTests.profiler=async"]
+        timeout = Duration.ofMinutes(10)
     }
 }
 
