--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -2,19 +2,15 @@ name: Build AnalyzeHelper
 on: [ push ]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [macos-latest]
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Run headless test
+        uses: GabrielBB/xvfb-action@v1
         with:
-          java-version: '11'
-          distribution: 'adopt'
-          cache: gradle
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - run: sudo apt-get install xvfb
-      - name: Run xvfb
-        run: Xvfb :99 -s -ac -screen 0 1920x1080x24 > /dev/null 2>&1 &
-      - name: Build with Gradle
-        run: export DISPLAY=':99.0' && env && ./gradlew clean runIde --debug --stacktrace
+          run: ./gradlew clean runIde --debug
+          options: "-ac -screen 0 1920x1080x24"
