--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
@@ -15,6 +15,8 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
           cache: gradle
+      - name: Install window manage
+        run: apt-get install ubuntu-desktop
       - name: Run headless test
         uses: GabrielBB/xvfb-action@v1
         with:
