--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -16,7 +16,7 @@ jobs:
           distribution: 'adopt'
           cache: gradle
       - name: Install window manage
-        run: apt-get install ubuntu-desktop
+        run: sudo apt-get install ubuntu-desktop
       - name: Run headless test
         uses: GabrielBB/xvfb-action@v1
         with:
