--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -16,7 +16,7 @@ jobs:
           distribution: 'adopt'
           cache: gradle
       - name: Install window manage
-        run: apt-get update && apt-get install ubuntu-desktop -y
+        run: sudo apt-get update && apt-get install ubuntu-desktop -y
       - name: Run headless test
         uses: GabrielBB/xvfb-action@v1
         with:
