--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -24,3 +24,6 @@ jobs:
         with:
           run: ./gradlew clean runIde --debug
           options: "-ac -screen 0 1920x1080x24"
+        continue-on-error: true
+      - name: Finding logs
+        run: ls -la /home/runner/.gradle/caches/modules-2/files-2.1/com.jetbrains.intellij.idea/ideaIC/2021.3
