--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ intellij {
         plugins = ['com.jetbrains.performancePlugin:213.5744.122']
         args = ["$rootDir/test"]
         jvmArgs = ["-Djdk.attach.allowAttachSelf=true", "-Dtestscript.filename=$rootDir/test/test.ijperf", "-DintegrationTests.profiler=async"]
-        timeout = Duration.ofMinutes(7)
+        timeout = Duration.ofMinutes(6).plusSeconds(15)
     }
 }
 
