--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -22,7 +22,7 @@ jobs:
           options: "-ac -screen 0 1920x1080x24"
         continue-on-error: true
       - name: Finding logs
-        run: find / -name "log.*"
+        run: find / -name "log.txt"
       - uses: actions/upload-artifact@v2
         with:
           name: idee-artifact
