--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -26,20 +26,5 @@ jobs:
          name: idee-artifact
          path: /home/runner/.gradle/caches/modules-2/files-2.1/com.jetbrains.intellij.idea/ideaIC/2021.3/75777e10a0e2880bc02945066dda2480a696c3d9/ideaIC-2021.3/bin/log.xml
       - name: Search plugin dir
-        run: find /home/runner/work/analyze-helper-plugin/ -name "log.*" 2>/dev/nul
-        continue-on-error: true
-      - name: Search home
-        run: find /home -name "log.*" 2>/dev/nul
-        continue-on-error: true
-      - name: Search tilda
-        run: find ~ -name "log.*" 2>/dev/nul
-        continue-on-error: true
-      - name: Search opt
-        run: find /opt -name "log.*" 2>/dev/nul
-        continue-on-error: true
-      - name: Search usr
-        run: find /usr -name "log.*" 2>/dev/nul
-        continue-on-error: true
-      - name: Search tmp
-        run: find /tmp -name "log.*" 2>/dev/nul
+        run: find ~ -name "idea.log*"
         continue-on-error: true
