--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -21,6 +21,8 @@ jobs:
           run: ./gradlew clean runIde --debug &
           options: "-ac -screen 0 1920x1080x24"
         continue-on-error: true
+      - name: Install xwd
+        run: sudo apt-get install x11-apps
       - name: Sleep for 30 seconds
         uses: jakejarvis/wait-action@master
         with:
