--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Run headless test
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: ./gradlew clean runIde --debug &
+          run: ./gradlew clean runIde --debug > /dev/null 2>&1 &
           options: "-ac -screen 0 1920x1080x24"
         continue-on-error: true
       - name: Install xwd
