--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -15,12 +15,13 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
           cache: gradle
-      - name: Run headless test
-        uses: GabrielBB/xvfb-action@v1
-        with:
-          run: ./gradlew clean runIde --debug > /dev/null 2>&1 &
-          options: "-ac -screen 0 1920x1080x24"
-        continue-on-error: true
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - run: sudo apt-get install xvfb
+      - name: Run xvfb
+        run: Xvfb :99 -s -ac -screen 0 1920x1080x24 > /dev/null 2>&1 &
+      - name: Run performance test
+        run: export DISPLAY=':99.0' && ./gradlew runIde --debug &
       - name: Install xwd
         run: sudo apt-get install x11-apps
       - name: Sleep for 30 seconds
@@ -28,7 +29,7 @@ jobs:
         with:
           time: '30s'
       - name: Take screentshot
-        run: xwd -display :0 -root -silent | convert xwd:- png:/home/runner/work/analyze-helper-plugin/analyze-helper-plugin/build/idea-sandbox/system/log/screenshot.png
+        run: xwd -display :99.0 -root -silent | convert xwd:- png:/home/runner/work/analyze-helper-plugin/analyze-helper-plugin/build/idea-sandbox/system/log/screenshot.png
       - uses: actions/upload-artifact@v2
         with:
          name: idee-logs
