--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,17 @@ intellij {
     runIde {
         plugins = ['com.jetbrains.performancePlugin:213.5744.122']
         args = ["$rootDir/test"]
-        jvmArgs = ["-Djdk.attach.allowAttachSelf=true", "-Dtestscript.filename=$rootDir/test/test.ijperf", "-DintegrationTests.profiler=async", "-Didea.is.integration.test=true", "-Dide.performance.screenshot.before.kill=/home/runner/work/analyze-helper-plugin/analyze-helper-plugin/build/idea-sandbox/system/log/screenshot_beforeKill.jpg"]
+        jvmArgs = [ "-Djdk.attach.allowAttachSelf=true",
+                    "-Dtestscript.filename=$rootDir/test/test.ijperf",
+                    "-DintegrationTests.profiler=async",
+                    "-Didea.is.integration.test=true",
+                    "-Dide.performance.screenshot.before.kill=/home/runner/work/analyze-helper-plugin/analyze-helper-plugin/build/idea-sandbox/system/log/screenshot_beforeKill.jpg",
+                    "-Djb.privacy.policy.text=<!--999.999-->",
+                    "-Djb.consents.confirmation.enabled=false",
+                    "-Didea.local.statistics.without.report=true",
+                    "-Dlinux.native.menu.force.disable=true",
+                    "-Didea.fatal.error.notification=true"
+        ]
         timeout = Duration.ofMinutes(6).plusSeconds(15)
     }
 }
