--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -29,4 +29,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
          name: idee-logs
-         path: /home/runner/work/analyze-helper-plugin/analyze-helper-plugin/build/idea-sandbox/system/log
+         path: log
