--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,8 @@ intellij {
                     "-Didea.local.statistics.without.report=true",
                     "-Dlinux.native.menu.force.disable=true",
                     "-Didea.fatal.error.notification=true",
-                    "-Didea.log.path=$rootDir/log"
+                    "-Didea.log.path=$rootDir/log",
+                    "-Dmemory.snapshots.path=$rootDir/memory_snapshots"
         ]
     }
 }
