--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.jetbrains.intellij' version '1.1.4'
     id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.5.31'
 }
 
 group 'ru.salamon'
@@ -8,9 +9,15 @@ version '1.0'
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://packages.jetbrains.team/maven/p/teamcity-rest-client/teamcity-rest-client"
+    }
 }
 
 dependencies {
+    implementation('org.jetbrains.teamcity:teamcity-rest-client:1.14.0') {
+        exclude group: 'org.slf4j', module: 'slf4j-api'
+    }
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
